--- a/css/styles.css
+++ b/css/styles.css
@@ -35,12 +35,25 @@
 }
 
 /* Base */
+* {
+  box-sizing: border-box;
+}
 body {
   color: var(--color-primary-dark);
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
+  margin: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
 }
 address {
   font-style: normal;
@@ -48,10 +61,30 @@ address {
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
 
+.section {
+  padding: 48px 0;
+}
+.container {
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
 /* Button */
 .button {
+  padding: 16px 32px;
   color: var(--color-primary-light);
   border-radius: 8px;
   border: 2px solid var(--color-brand-light);
@@ -73,26 +106,58 @@ ul {
 
 .link:hover {
   color: var(--color-brand-light);
-  font-weight: 600;
+  /* font-weight: 600; */
 }
+
+/* Header */
+.header-container {
+  display: flex;
+  align-items: center; /*remove*/
+  gap: 40px;
+  background: #969696;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  gap: 40px;
+}
+.header-menu {
+  display: flex;
+  gap: 64px;
+  flex-grow: 1;
+  justify-content: center;
+}
+
 /* Hero section */
+.hero-section {
+  padding: 272px 0;
+}
+
 .hero-title {
   color: var(--color-primary-light);
   text-align: center;
   font-size: 128px;
   font-weight: 900;
+  margin-bottom: 0;
 }
 .hero-title .accent {
   color: var(--color-brand-light);
 }
 /* Advantages */
-.advantages-list {
-  color: var(--color-primary-light);
+.advantages-section {
+  padding: 16px 0;
   background-color: var(--color-brand-light);
+}
+.advantages-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
 }
 .advantages-item {
   font-size: 20px;
   font-weight: 300;
+  color: var(--color-primary-light);
 }
 
 .section-title {
@@ -105,22 +170,61 @@ ul {
   color: var(--color-brand-dark);
 }
 /* Traditions section */
+.traditions-sections {
+  padding-top: 96px;
+}
+.traditions-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+.traditions-content {
+  max-width: 710px;
+}
+.traditions-title {
+  margin-bottom: 42px;
+}
+
 .traditions-text .brand {
   color: var(--color-brand-light);
   font-weight: 600;
+}
+.traditions-text.limited {
+  max-width: 340px;
 }
 .uppercase {
   text-transform: uppercase;
 }
 
 /* Chefs section */
-.chefs-title {
+.chef-title {
   font-size: 40px;
   font-weight: 600;
+  margin-bottom: 16px;
+}
+.chefs-title {
+  margin-bottom: 80px;
 }
 
 /* Formats sections */
+.formats-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.formats-item {
+  flex-basis: calc((100% - 40px) / 3);
+}
+.format-card {
+  padding: 24px;
+  border: 1px solid lightgrey; /*remove*/
+  border-radius: 16px;
+}
 .formats-title {
+  margin-bottom: 80px;
+}
+.format-title {
   font-size: 24px;
   font-weight: 600;
 }
@@ -128,6 +232,10 @@ ul {
 .formats-text {
   font-size: 14px;
   font-weight: 300;
+}
+/* Contacts sections */
+.contacts-title {
+  margin-bottom: 16px;
 }
 
 /* Footer */
