--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,10 @@ ul {
 /* Hero section */
 .hero-section {
   padding: 272px 0;
+  background-image: url(../images/couple-in-bakery.jpg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
 }
 
 .hero-title {
@@ -164,6 +168,10 @@ ul {
   font-size: 64px;
   font-weight: 900;
   line-height: 1.3;
+}
+
+.section-title.centered {
+  text-align: center;
 }
 
 .section-title .accent {
@@ -203,7 +211,21 @@ ul {
   margin-bottom: 16px;
 }
 .chefs-title {
-  margin-bottom: 80px;
+  margin: 0 auto 80px;
+  max-width: 558px;
+}
+
+.chef-photo {
+  border-radius: 4px 4px 4px 200px;
+  box-shadow: -16px 16px 0 0 #faf4ea, -16px 16px 0 2px #0c0c0c;
+}
+.chefs-title::after,
+.chefs-title::before {
+  display: block;
+  width: 352px;
+  height: 2px;
+  background-color: var(--color-primary-light);
+  content: " ";
 }
 
 /* Formats sections */
@@ -217,9 +239,17 @@ ul {
   flex-basis: calc((100% - 40px) / 3);
   border: 1px solid lightgrey;
   border-radius: 16px;
+  border-radius: 16px;
+  background-image: linear-gradient(
+    180deg,
+    rgba(49, 38, 26, 0) 55.21%,
+    rgba(49, 38, 26, 0.71) 72.92%,
+    var(--color-primary-dark) 100%
+  );
 }
 .format-card {
   padding: 24px;
+  height: 444px;
 }
 .formats-title {
   margin-bottom: 80px;
@@ -233,6 +263,26 @@ ul {
   font-size: 14px;
   font-weight: 300;
 }
+/* Carousel */
+.carousel-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  fill: var(--color-primary-dark);
+  border: 1px solid var(--color-primary-dark);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.carousel-button:hover {
+  fill: var(--color-primary-light);
+  background-color: var(--color-primary-dark);
+}
+
 /* Contacts sections */
 .contacts-title {
   margin-bottom: 16px;
@@ -248,6 +298,20 @@ ul {
 .address-link:hover {
   color: var(--color-brand-light);
 }
+
+.address-icon {
+  fill: var(--color-primary-light);
+}
+.address-icon:hover {
+  fill: var(--color-brand-light);
+}
 .address-copyright {
   font-size: 14px;
+}
+.footer {
+  background-image: url(../images/footer-background.png);
+  background-color: var(--color-primary-dark);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
