--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,9 @@
 }
 
 /* Base */
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 body {
@@ -57,6 +59,9 @@ p {
 }
 address {
   font-style: normal;
+}
+a {
+  display: inline-block;
 }
 
 ul {
@@ -205,6 +210,7 @@ ul {
 }
 
 /* Chefs section */
+
 .chef-title {
   font-size: 40px;
   font-weight: 600;
@@ -214,7 +220,25 @@ ul {
   margin: 0 auto 80px;
   max-width: 558px;
 }
+.chefs-list {
+  display: flex;
+  gap: 40px 30px;
+  flex-wrap: wrap;
+}
+.chef-item {
+  flex-basis: calc((100% - 30px) / 2);
+}
+.chef-text p {
+  margin-bottom: 24px;
+}
+.chef-text p:last-child {
+  margin-bottom: 0px;
+}
 
+.chef-card {
+  display: flex;
+  gap: 30px;
+}
 .chef-photo {
   border-radius: 4px 4px 4px 200px;
   box-shadow: -16px 16px 0 0 #faf4ea, -16px 16px 0 2px #0c0c0c;
@@ -229,6 +253,12 @@ ul {
 }
 
 /* Formats sections */
+.formats-container {
+  display: flex;
+  gap: 32px;
+  align-items: center;
+}
+
 .formats-list {
   display: flex;
   flex-wrap: wrap;
@@ -284,11 +314,41 @@ ul {
 }
 
 /* Contacts sections */
+.contact-section {
+  padding-bottom: 96px;
+}
+.contact-container {
+  display: flex;
+  gap: 32px;
+}
+.contact-map {
+  flex-shrink: 0;
+  border: none;
+  border-radius: 16px;
+}
 .contacts-title {
   margin-bottom: 16px;
 }
 
 /* Footer */
+.footer-container {
+  display: flex;
+  gap: 20px;
+}
+.footer-nav,
+.footer-address {
+  display: flex;
+  flex-basis: 50%;
+  gap: 20px;
+}
+
+.footer-logo,
+.footer-menu,
+.address-list,
+.address-info {
+  flex-grow: 1;
+}
+
 .address-link {
   font-size: 16px;
   font-weight: 300;
@@ -309,6 +369,7 @@ ul {
   font-size: 14px;
 }
 .footer {
+  padding: 32px 0;
   background-image: url(../images/footer-background.png);
   background-color: var(--color-primary-dark);
   background-repeat: no-repeat;
