add js and positions

--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,8 @@ ul {
 }
 .chefs-title {
   margin: 0 auto 80px;
-  max-width: 558px;
+  /* max-width: 558px; */
+  position: relative;
 }
 .chefs-list {
   display: flex;
@@ -250,6 +251,15 @@ ul {
   height: 2px;
   background-color: var(--color-primary-light);
   content: " ";
+  position: absolute;
+  bottom: 24px;
+}
+
+.chefs-title::before {
+  left: 0;
+}
+.chefs-title::after {
+  right: 0;
 }
 
 /* Formats sections */
@@ -331,6 +341,35 @@ ul {
 }
 
 /* Footer */
+.footer {
+  position: relative;
+  padding: 32px 0;
+  background-image: url(../images/footer-background.png);
+  background-color: var(--color-primary-dark);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.footer::before {
+  position: absolute;
+  width: 180px;
+  height: 120px;
+  bottom: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  background-image: url(../images/decor-bread-small.png);
+  content: "";
+}
+.footer::after {
+  position: absolute;
+  width: 380px;
+  height: 190px;
+  bottom: 0;
+  right: 0;
+  background-image: url(../images/decor-bread-big.png);
+  content: "";
+}
 .footer-container {
   display: flex;
   gap: 20px;
@@ -368,11 +407,33 @@ ul {
 .address-copyright {
   font-size: 14px;
 }
-.footer {
-  padding: 32px 0;
-  background-image: url(../images/footer-background.png);
-  background-color: var(--color-primary-dark);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+
+/* Modal */
+.backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  position: relative;
+  width: 880px;
+  height: 880px;
+  background-color: var(--color-primary-light);
+  border-radius: 32px;
+}
+.modal-btn-close {
+  position: absolute;
+  right: 40px;
+  top: 40px;
 }
