--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ ul {
 .link {
   color: var(--color-primary-light);
   text-decoration: none;
+  transition: color 0.3s;
 }
 
 .link:hover {
@@ -115,11 +116,18 @@ ul {
 }
 
 /* Header */
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 32px;
+}
+
 .header-container {
   display: flex;
   align-items: center; /*remove*/
   gap: 40px;
-  background: #969696;
 }
 .header-nav {
   display: flex;
@@ -137,7 +145,13 @@ ul {
 /* Hero section */
 .hero-section {
   padding: 272px 0;
-  background-image: url(../images/couple-in-bakery.jpg);
+  background-image: linear-gradient(
+      102.76deg,
+      rgba(18, 18, 17, 0.78) 2.03%,
+      rgba(18, 18, 17, 0.6) 58.46%,
+      rgba(18, 18, 17, 0) 90.36%
+    ),
+    url(../images/couple-in-bakery.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -277,8 +291,11 @@ ul {
 
 .formats-item {
   flex-basis: calc((100% - 40px) / 3);
+}
+.format-card {
+  padding: 24px;
+  height: 444px;
   border: 1px solid lightgrey;
-  border-radius: 16px;
   border-radius: 16px;
   background-image: linear-gradient(
     180deg,
@@ -286,11 +303,12 @@ ul {
     rgba(49, 38, 26, 0.71) 72.92%,
     var(--color-primary-dark) 100%
   );
+  transition: transform 0.3s;
 }
-.format-card {
-  padding: 24px;
-  height: 444px;
+.format-card:hover {
+  transform: scale(1.05);
 }
+
 .formats-title {
   margin-bottom: 80px;
 }
@@ -321,6 +339,9 @@ ul {
 .carousel-button:hover {
   fill: var(--color-primary-light);
   background-color: var(--color-primary-dark);
+}
+.carousel-button.next {
+  transform: rotate(180deg);
 }
 
 /* Contacts sections */
@@ -367,6 +388,7 @@ ul {
   height: 190px;
   bottom: 0;
   right: 0;
+  background-repeat: no-repeat;
   background-image: url(../images/decor-bread-big.png);
   content: "";
 }
@@ -386,8 +408,27 @@ ul {
 .address-list,
 .address-info {
   flex-grow: 1;
+  gap: 16px;
+}
+.address-info {
+  display: flex;
+  flex-direction: column;
+}
+.footer-menu {
+  display: flex;
+  flex-direction: column;
 }
 
+.footer-socials {
+  display: flex;
+  gap: 24px;
+  margin-top: 16px;
+}
+
+.address-list {
+  display: flex;
+  flex-direction: column;
+}
 .address-link {
   font-size: 16px;
   font-weight: 300;
@@ -406,6 +447,7 @@ ul {
 }
 .address-copyright {
   font-size: 14px;
+  color: var(--color-primary-dark);
 }
 
 /* Modal */
@@ -419,6 +461,8 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 20px 0;
+  transition: opacity 0.3s, visibility 0.3s;
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -427,13 +471,53 @@ ul {
 }
 .modal {
   position: relative;
-  width: 880px;
-  height: 880px;
+  width: 100%;
+  height: 100%;
+  max-width: 880px;
+  max-height: 880px;
+  padding: 128px;
   background-color: var(--color-primary-light);
   border-radius: 32px;
+  overflow-y: auto;
 }
 .modal-btn-close {
   position: absolute;
   right: 40px;
   top: 40px;
+}
+/* Form */
+.form-field {
+  margin-bottom: 32px;
+}
+.form-input {
+  padding: 16px 42px;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid var(--color-primary-dark);
+  background-color: transparent;
+}
+.form-input:focus {
+  border-color: var(--color-brand-light);
+  outline: none;
+  font-size: 16px;
+}
+
+.form-label {
+  display: block;
+}
+.form-button {
+  display: block;
+  margin: 0 auto 24px;
+}
+.form-terms {
+  margin: 0 auto;
+  max-width: 213px;
+  font-size: 12px;
+  line-height: 1.5;
+  font-weight: 500;
+  text-align: center;
+}
+.form-link {
+  color: var(--color-primary-dark);
+  text-underline-offset: 2px;
 }
