--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@
   font-weight: 900;
   src: url("../fonts/poppins-v20-latin-900.woff2") format("woff2");
 }
-
 :root {
   --color-brand-light: #819b57;
   --color-primary-dark: #31261a;
@@ -40,6 +39,7 @@
 *::before {
   box-sizing: border-box;
 }
+
 body {
   color: var(--color-primary-dark);
   font-family: "Poppins", sans-serif;
@@ -48,6 +48,7 @@ body {
   line-height: 1.5;
   margin: 0;
 }
+
 h1,
 h2,
 h3,
@@ -57,9 +58,11 @@ h6,
 p {
   margin-top: 0;
 }
+
 address {
   font-style: normal;
 }
+
 a {
   display: inline-block;
 }
@@ -69,6 +72,7 @@ ul {
   margin: 0;
   padding: 0;
 }
+
 .visually-hidden {
   position: absolute;
   left: -10000px;
@@ -81,12 +85,14 @@ ul {
 .section {
   padding: 48px 0;
 }
+
 .container {
   width: 100%;
   max-width: 1288px;
   margin: 0 auto;
   padding: 0 24px;
 }
+
 /* Button */
 .button {
   padding: 16px 32px;
@@ -126,15 +132,18 @@ ul {
 
 .header-container {
   display: flex;
-  align-items: center; /*remove*/
+  align-items: center;
+  /*remove*/
   gap: 40px;
 }
+
 .header-nav {
   display: flex;
   align-items: center;
   flex-grow: 1;
   gap: 40px;
 }
+
 .header-menu {
   display: flex;
   gap: 64px;
@@ -145,13 +154,7 @@ ul {
 /* Hero section */
 .hero-section {
   padding: 272px 0;
-  background-image: linear-gradient(
-      102.76deg,
-      rgba(18, 18, 17, 0.78) 2.03%,
-      rgba(18, 18, 17, 0.6) 58.46%,
-      rgba(18, 18, 17, 0) 90.36%
-    ),
-    url(../images/couple-in-bakery.jpg);
+  background-image: linear-gradient(102.76deg, rgba(18, 18, 17, 0.78) 2.03%, rgba(18, 18, 17, 0.6) 58.46%, rgba(18, 18, 17, 0) 90.36%), url(../images/couple-in-bakery.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -164,19 +167,23 @@ ul {
   font-weight: 900;
   margin-bottom: 0;
 }
+
 .hero-title .accent {
   color: var(--color-brand-light);
 }
+
 /* Advantages */
 .advantages-section {
   padding: 16px 0;
   background-color: var(--color-brand-light);
 }
+
 .advantages-list {
   display: flex;
   justify-content: space-between;
   gap: 40px;
 }
+
 .advantages-item {
   font-size: 20px;
   font-weight: 300;
@@ -196,18 +203,22 @@ ul {
 .section-title .accent {
   color: var(--color-brand-dark);
 }
+
 /* Traditions section */
 .traditions-sections {
   padding-top: 96px;
 }
+
 .traditions-container {
   display: flex;
   justify-content: space-between;
   gap: 40px;
 }
+
 .traditions-content {
   max-width: 710px;
 }
+
 .traditions-title {
   margin-bottom: 42px;
 }
@@ -216,36 +227,42 @@ ul {
   color: var(--color-brand-light);
   font-weight: 600;
 }
+
 .traditions-text.limited {
   max-width: 340px;
 }
+
 .uppercase {
   text-transform: uppercase;
 }
 
 /* Chefs section */
-
 .chef-title {
   font-size: 40px;
   font-weight: 600;
   margin-bottom: 16px;
 }
+
 .chefs-title {
   margin: 0 auto 80px;
   /* max-width: 558px; */
   position: relative;
 }
+
 .chefs-list {
   display: flex;
   gap: 40px 30px;
   flex-wrap: wrap;
 }
+
 .chef-item {
   flex-basis: calc((100% - 30px) / 2);
 }
+
 .chef-text p {
   margin-bottom: 24px;
 }
+
 .chef-text p:last-child {
   margin-bottom: 0px;
 }
@@ -254,10 +271,12 @@ ul {
   display: flex;
   gap: 30px;
 }
+
 .chef-photo {
   border-radius: 4px 4px 4px 200px;
   box-shadow: -16px 16px 0 0 #faf4ea, -16px 16px 0 2px #0c0c0c;
 }
+
 .chefs-title::after,
 .chefs-title::before {
   display: block;
@@ -272,6 +291,7 @@ ul {
 .chefs-title::before {
   left: 0;
 }
+
 .chefs-title::after {
   right: 0;
 }
@@ -292,19 +312,16 @@ ul {
 .formats-item {
   flex-basis: calc((100% - 40px) / 3);
 }
+
 .format-card {
   padding: 24px;
   height: 444px;
   border: 1px solid lightgrey;
   border-radius: 16px;
-  background-image: linear-gradient(
-    180deg,
-    rgba(49, 38, 26, 0) 55.21%,
-    rgba(49, 38, 26, 0.71) 72.92%,
-    var(--color-primary-dark) 100%
-  );
+  background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark) 100%);
   transition: transform 0.3s;
 }
+
 .format-card:hover {
   transform: scale(1.05);
 }
@@ -312,6 +329,7 @@ ul {
 .formats-title {
   margin-bottom: 80px;
 }
+
 .format-title {
   font-size: 24px;
   font-weight: 600;
@@ -321,6 +339,7 @@ ul {
   font-size: 14px;
   font-weight: 300;
 }
+
 /* Carousel */
 .carousel-button {
   display: flex;
@@ -336,10 +355,12 @@ ul {
   border-radius: 50%;
   cursor: pointer;
 }
+
 .carousel-button:hover {
   fill: var(--color-primary-light);
   background-color: var(--color-primary-dark);
 }
+
 .carousel-button.next {
   transform: rotate(180deg);
 }
@@ -348,15 +369,18 @@ ul {
 .contact-section {
   padding-bottom: 96px;
 }
+
 .contact-container {
   display: flex;
   gap: 32px;
 }
+
 .contact-map {
   flex-shrink: 0;
   border: none;
   border-radius: 16px;
 }
+
 .contacts-title {
   margin-bottom: 16px;
 }
@@ -382,6 +406,7 @@ ul {
   background-image: url(../images/decor-bread-small.png);
   content: "";
 }
+
 .footer::after {
   position: absolute;
   width: 380px;
@@ -392,10 +417,12 @@ ul {
   background-image: url(../images/decor-bread-big.png);
   content: "";
 }
+
 .footer-container {
   display: flex;
   gap: 20px;
 }
+
 .footer-nav,
 .footer-address {
   display: flex;
@@ -410,10 +437,12 @@ ul {
   flex-grow: 1;
   gap: 16px;
 }
+
 .address-info {
   display: flex;
   flex-direction: column;
 }
+
 .footer-menu {
   display: flex;
   flex-direction: column;
@@ -429,12 +458,14 @@ ul {
   display: flex;
   flex-direction: column;
 }
+
 .address-link {
   font-size: 16px;
   font-weight: 300;
   text-decoration: none;
   color: var(--color-primary-light);
 }
+
 .address-link:hover {
   color: var(--color-brand-light);
 }
@@ -442,9 +473,11 @@ ul {
 .address-icon {
   fill: var(--color-primary-light);
 }
+
 .address-icon:hover {
   fill: var(--color-brand-light);
 }
+
 .address-copyright {
   font-size: 14px;
   color: var(--color-primary-dark);
@@ -464,11 +497,13 @@ ul {
   padding: 20px 0;
   transition: opacity 0.3s, visibility 0.3s;
 }
+
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
+
 .modal {
   position: relative;
   width: 100%;
@@ -480,15 +515,18 @@ ul {
   border-radius: 32px;
   overflow-y: auto;
 }
+
 .modal-btn-close {
   position: absolute;
   right: 40px;
   top: 40px;
 }
+
 /* Form */
 .form-field {
   margin-bottom: 32px;
 }
+
 .form-input {
   padding: 16px 42px;
   width: 100%;
@@ -496,6 +534,7 @@ ul {
   border: 1px solid var(--color-primary-dark);
   background-color: transparent;
 }
+
 .form-input:focus {
   border-color: var(--color-brand-light);
   outline: none;
@@ -505,10 +544,12 @@ ul {
 .form-label {
   display: block;
 }
+
 .form-button {
   display: block;
   margin: 0 auto 24px;
 }
+
 .form-terms {
   margin: 0 auto;
   max-width: 213px;
@@ -517,7 +558,8 @@ ul {
   font-weight: 500;
   text-align: center;
 }
+
 .form-link {
   color: var(--color-primary-dark);
   text-underline-offset: 2px;
-}
+}/*# sourceMappingURL=main.css.map */
