--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,6 @@
   --color-brand-dark: #465929;
 }
 
-/* Base */
 *,
 *::after,
 *::before {
@@ -82,18 +81,6 @@ ul {
   overflow: hidden;
 }
 
-.section {
-  padding: 48px 0;
-}
-
-.container {
-  width: 100%;
-  max-width: 1288px;
-  margin: 0 auto;
-  padding: 0 24px;
-}
-
-/* Button */
 .button {
   padding: 16px 32px;
   color: var(--color-primary-light);
@@ -109,7 +96,6 @@ ul {
   color: var(--color-brand-light);
 }
 
-/* Link */
 .link {
   color: var(--color-primary-light);
   text-decoration: none;
@@ -118,10 +104,33 @@ ul {
 
 .link:hover {
   color: var(--color-brand-light);
-  /* font-weight: 600; */
 }
 
-/* Header */
+.section {
+  padding: 48px 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
+.section-title {
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 1.3;
+}
+
+.section-title.centered {
+  text-align: center;
+}
+
+.section-title .accent {
+  color: var(--color-brand-dark);
+}
+
 .header {
   position: absolute;
   top: 0;
@@ -133,7 +142,6 @@ ul {
 .header-container {
   display: flex;
   align-items: center;
-  /*remove*/
   gap: 40px;
 }
 
@@ -151,10 +159,15 @@ ul {
   justify-content: center;
 }
 
-/* Hero section */
 .hero-section {
   padding: 272px 0;
-  background-image: linear-gradient(102.76deg, rgba(18, 18, 17, 0.78) 2.03%, rgba(18, 18, 17, 0.6) 58.46%, rgba(18, 18, 17, 0) 90.36%), url(../images/couple-in-bakery.jpg);
+  background-image: linear-gradient(
+      102.76deg,
+      rgba(18, 18, 17, 0.78) 2.03%,
+      rgba(18, 18, 17, 0.6) 58.46%,
+      rgba(18, 18, 17, 0) 90.36%
+    ),
+    url(../images/couple-in-bakery.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -172,39 +185,6 @@ ul {
   color: var(--color-brand-light);
 }
 
-/* Advantages */
-.advantages-section {
-  padding: 16px 0;
-  background-color: var(--color-brand-light);
-}
-
-.advantages-list {
-  display: flex;
-  justify-content: space-between;
-  gap: 40px;
-}
-
-.advantages-item {
-  font-size: 20px;
-  font-weight: 300;
-  color: var(--color-primary-light);
-}
-
-.section-title {
-  font-size: 64px;
-  font-weight: 900;
-  line-height: 1.3;
-}
-
-.section-title.centered {
-  text-align: center;
-}
-
-.section-title .accent {
-  color: var(--color-brand-dark);
-}
-
-/* Traditions section */
 .traditions-sections {
   padding-top: 96px;
 }
@@ -236,7 +216,6 @@ ul {
   text-transform: uppercase;
 }
 
-/* Chefs section */
 .chef-title {
   font-size: 40px;
   font-weight: 600;
@@ -296,7 +275,6 @@ ul {
   right: 0;
 }
 
-/* Formats sections */
 .formats-container {
   display: flex;
   gap: 32px;
@@ -314,16 +292,33 @@ ul {
 }
 
 .format-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   padding: 24px;
   height: 444px;
-  border: 1px solid lightgrey;
   border-radius: 16px;
-  background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark) 100%);
+  background-image: linear-gradient(
+    180deg,
+    rgba(49, 38, 26, 0) 55.21%,
+    rgba(49, 38, 26, 0.71) 72.92%,
+    var(--color-primary-dark) 100%
+  );
   transition: transform 0.3s;
 }
 
 .format-card:hover {
   transform: scale(1.05);
+}
+
+.format-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .formats-title {
@@ -333,39 +328,32 @@ ul {
 .format-title {
   font-size: 24px;
   font-weight: 600;
+  color: var(--color-primary-light);
 }
 
 .formats-text {
   font-size: 14px;
   font-weight: 300;
+  color: var(--color-primary-light);
 }
 
-/* Carousel */
-.carousel-button {
+.advantages-section {
+  padding: 16px 0;
+  background-color: var(--color-brand-light);
+}
+
+.advantages-list {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  background-color: transparent;
-  margin: 0;
-  padding: 0;
-  fill: var(--color-primary-dark);
-  border: 1px solid var(--color-primary-dark);
-  border-radius: 50%;
-  cursor: pointer;
+  justify-content: space-between;
+  gap: 40px;
 }
 
-.carousel-button:hover {
-  fill: var(--color-primary-light);
-  background-color: var(--color-primary-dark);
+.advantages-item {
+  font-size: 20px;
+  font-weight: 300;
+  color: var(--color-primary-light);
 }
 
-.carousel-button.next {
-  transform: rotate(180deg);
-}
-
-/* Contacts sections */
 .contact-section {
   padding-bottom: 96px;
 }
@@ -385,7 +373,6 @@ ul {
   margin-bottom: 16px;
 }
 
-/* Footer */
 .footer {
   position: relative;
   padding: 32px 0;
@@ -483,7 +470,6 @@ ul {
   color: var(--color-primary-dark);
 }
 
-/* Modal */
 .backdrop {
   position: fixed;
   top: 0;
@@ -522,7 +508,6 @@ ul {
   top: 40px;
 }
 
-/* Form */
 .form-field {
   margin-bottom: 32px;
 }
@@ -562,4 +547,28 @@ ul {
 .form-link {
   color: var(--color-primary-dark);
   text-underline-offset: 2px;
-}/*# sourceMappingURL=main.css.map */
+}
+
+.carousel-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  fill: var(--color-primary-dark);
+  border: 1px solid var(--color-primary-dark);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.carousel-button:hover {
+  fill: var(--color-primary-light);
+  background-color: var(--color-primary-dark);
+}
+
+.carousel-button.next {
+  transform: rotate(180deg);
+} /*# sourceMappingURL=main.css.map */
