--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,450 +2,24 @@
 
 @import "./utils/variables";
 
-/* Base */
 @import "./base";
 
 @import "./utils/utils";
 
-.section {
-    padding: 48px 0;
-}
-
-.container {
-    width: 100%;
-    max-width: 1288px;
-    margin: 0 auto;
-    padding: 0 24px;
-}
-
-
 @import "./components/buttons";
 
-
-
-@import "./components/links"
-
-
-
-@import "./components/header"
-
-
-.hero-section {
-    padding: 272px 0;
-    background-image: linear-gradient(102.76deg,
-            rgba(18, 18, 17, 0.78) 2.03%,
-            rgba(18, 18, 17, 0.6) 58.46%,
-            rgba(18, 18, 17, 0) 90.36%),
-        url(../images/couple-in-bakery.jpg);
-    background-repeat: no-repeat;
-    background-position: center top;
-    background-size: cover;
-}
-
-.hero-title {
-    color: var(--color-primary-light);
-    text-align: center;
-    font-size: 128px;
-    font-weight: 900;
-    margin-bottom: 0;
-}
-
-.hero-title .accent {
-    color: var(--color-brand-light);
-}
-
-/* Advantages */
-.advantages-section {
-    padding: 16px 0;
-    background-color: var(--color-brand-light);
-}
-
-.advantages-list {
-    display: flex;
-    justify-content: space-between;
-    gap: 40px;
-}
-
-.advantages-item {
-    font-size: 20px;
-    font-weight: 300;
-    color: var(--color-primary-light);
-}
-
-.section-title {
-    font-size: 64px;
-    font-weight: 900;
-    line-height: 1.3;
-}
-
-.section-title.centered {
-    text-align: center;
-}
-
-.section-title .accent {
-    color: var(--color-brand-dark);
-}
-
-/* Traditions section */
-.traditions-sections {
-    padding-top: 96px;
-}
-
-.traditions-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 40px;
-}
-
-.traditions-content {
-    max-width: 710px;
-}
-
-.traditions-title {
-    margin-bottom: 42px;
-}
-
-.traditions-text .brand {
-    color: var(--color-brand-light);
-    font-weight: 600;
-}
-
-.traditions-text.limited {
-    max-width: 340px;
-}
-
-.uppercase {
-    text-transform: uppercase;
-}
-
-/* Chefs section */
-
-.chef-title {
-    font-size: 40px;
-    font-weight: 600;
-    margin-bottom: 16px;
-}
-
-.chefs-title {
-    margin: 0 auto 80px;
-    /* max-width: 558px; */
-    position: relative;
-}
-
-.chefs-list {
-    display: flex;
-    gap: 40px 30px;
-    flex-wrap: wrap;
-}
-
-.chef-item {
-    flex-basis: calc((100% - 30px) / 2);
-}
-
-.chef-text p {
-    margin-bottom: 24px;
-}
-
-.chef-text p:last-child {
-    margin-bottom: 0px;
-}
-
-.chef-card {
-    display: flex;
-    gap: 30px;
-}
-
-.chef-photo {
-    border-radius: 4px 4px 4px 200px;
-    box-shadow: -16px 16px 0 0 #faf4ea, -16px 16px 0 2px #0c0c0c;
-}
-
-.chefs-title::after,
-.chefs-title::before {
-    display: block;
-    width: 352px;
-    height: 2px;
-    background-color: var(--color-primary-light);
-    content: " ";
-    position: absolute;
-    bottom: 24px;
-}
-
-.chefs-title::before {
-    left: 0;
-}
-
-.chefs-title::after {
-    right: 0;
-}
-
-/* Formats sections */
-.formats-container {
-    display: flex;
-    gap: 32px;
-    align-items: center;
-}
-
-.formats-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-.formats-item {
-    flex-basis: calc((100% - 40px) / 3);
-}
-
-.format-card {
-    padding: 24px;
-    height: 444px;
-    border: 1px solid lightgrey;
-    border-radius: 16px;
-    background-image: linear-gradient(180deg,
-            rgba(49, 38, 26, 0) 55.21%,
-            rgba(49, 38, 26, 0.71) 72.92%,
-            var(--color-primary-dark) 100%);
-    transition: transform 0.3s;
-}
-
-.format-card:hover {
-    transform: scale(1.05);
-}
-
-.formats-title {
-    margin-bottom: 80px;
-}
-
-.format-title {
-    font-size: 24px;
-    font-weight: 600;
-}
-
-.formats-text {
-    font-size: 14px;
-    font-weight: 300;
-}
-
-/* Carousel */
-.carousel-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 44px;
-    height: 44px;
-    background-color: transparent;
-    margin: 0;
-    padding: 0;
-    fill: var(--color-primary-dark);
-    border: 1px solid var(--color-primary-dark);
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.carousel-button:hover {
-    fill: var(--color-primary-light);
-    background-color: var(--color-primary-dark);
-}
-
-.carousel-button.next {
-    transform: rotate(180deg);
-}
-
-/* Contacts sections */
-.contact-section {
-    padding-bottom: 96px;
-}
-
-.contact-container {
-    display: flex;
-    gap: 32px;
-}
-
-.contact-map {
-    flex-shrink: 0;
-    border: none;
-    border-radius: 16px;
-}
-
-.contacts-title {
-    margin-bottom: 16px;
-}
-
-/* Footer */
-.footer {
-    position: relative;
-    padding: 32px 0;
-    background-image: url(../images/footer-background.png);
-    background-color: var(--color-primary-dark);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.footer::before {
-    position: absolute;
-    width: 180px;
-    height: 120px;
-    bottom: 0;
-    left: 0;
-    background-repeat: no-repeat;
-    background-image: url(../images/decor-bread-small.png);
-    content: "";
-}
-
-.footer::after {
-    position: absolute;
-    width: 380px;
-    height: 190px;
-    bottom: 0;
-    right: 0;
-    background-repeat: no-repeat;
-    background-image: url(../images/decor-bread-big.png);
-    content: "";
-}
-
-.footer-container {
-    display: flex;
-    gap: 20px;
-}
-
-.footer-nav,
-.footer-address {
-    display: flex;
-    flex-basis: 50%;
-    gap: 20px;
-}
-
-.footer-logo,
-.footer-menu,
-.address-list,
-.address-info {
-    flex-grow: 1;
-    gap: 16px;
-}
-
-.address-info {
-    display: flex;
-    flex-direction: column;
-}
-
-.footer-menu {
-    display: flex;
-    flex-direction: column;
-}
-
-.footer-socials {
-    display: flex;
-    gap: 24px;
-    margin-top: 16px;
-}
-
-.address-list {
-    display: flex;
-    flex-direction: column;
-}
-
-.address-link {
-    font-size: 16px;
-    font-weight: 300;
-    text-decoration: none;
-    color: var(--color-primary-light);
-}
-
-.address-link:hover {
-    color: var(--color-brand-light);
-}
-
-.address-icon {
-    fill: var(--color-primary-light);
-}
-
-.address-icon:hover {
-    fill: var(--color-brand-light);
-}
-
-.address-copyright {
-    font-size: 14px;
-    color: var(--color-primary-dark);
-}
-
-/* Modal */
-.backdrop {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px 0;
-    transition: opacity 0.3s, visibility 0.3s;
-}
-
-.backdrop.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-}
-
-.modal {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    max-width: 880px;
-    max-height: 880px;
-    padding: 128px;
-    background-color: var(--color-primary-light);
-    border-radius: 32px;
-    overflow-y: auto;
-}
-
-.modal-btn-close {
-    position: absolute;
-    right: 40px;
-    top: 40px;
-}
-
-/* Form */
-.form-field {
-    margin-bottom: 32px;
-}
-
-.form-input {
-    padding: 16px 42px;
-    width: 100%;
-    border-radius: 8px;
-    border: 1px solid var(--color-primary-dark);
-    background-color: transparent;
-}
-
-.form-input:focus {
-    border-color: var(--color-brand-light);
-    outline: none;
-    font-size: 16px;
-}
-
-.form-label {
-    display: block;
-}
-
-.form-button {
-    display: block;
-    margin: 0 auto 24px;
-}
-
-.form-terms {
-    margin: 0 auto;
-    max-width: 213px;
-    font-size: 12px;
-    line-height: 1.5;
-    font-weight: 500;
-    text-align: center;
-}
-
-.form-link {
-    color: var(--color-primary-dark);
-    text-underline-offset: 2px;
-}
+@import "./components/links";
+
+@import "./layouts/section";
+@import "./components/header";
+@import "./components/hero-section";
+@import "./layouts/traditions-section";
+@import "./layouts/chefs-section";
+@import "./layouts/format-section";
+@import "./layouts/advatnages-section";
+@import "./layouts/contacts-section";
+@import "./layouts/footer";
+@import "./layouts/modal";
+@import "./layouts/forms";
+
+@import "./components/carousel-button";
