--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,22 @@ ul {
   overflow: hidden;
 }
 
+.text-brand {
+  color: var(--color-brand-light);
+}
+
+.text-brand-dark {
+  color: var(--color-brand-dark);
+}
+
+.text-bold {
+  font-weight: 600;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
 .button {
   padding: 16px 32px;
   color: var(--color-primary-light);
@@ -104,31 +120,78 @@ ul {
 
 .link:hover {
   color: var(--color-brand-light);
+  /* font-weight: 600; */
+}
+
+.input {
+  position: relative;
+}
+.input__label {
+  position: absolute;
+  top: 16px;
+  left: 42px;
+}
+.input__control {
+  padding: 16px 42px;
+  width: 100%;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid var(--color-primary-dark);
+  background-color: transparent;
+}
+.input__control:focus {
+  border-color: var(--color-brand-light);
+  outline: none;
+}
+.input__control::-moz-placeholder {
+  color: var(--color-primary-dark);
+  font-style: 16px;
+  line-height: 1.17;
+}
+.input__control::placeholder {
+  color: var(--color-primary-dark);
+  font-style: 16px;
+  line-height: 1.17;
+}
+.input__control:focus::-moz-placeholder {
+  color: var(--color-primary-dark);
+}
+.input__control:focus::placeholder {
+  color: var(--color-primary-dark);
+}
+
+.carousel-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  fill: var(--color-primary-dark);
+  border: 1px solid var(--color-primary-dark);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.carousel-button:hover {
+  fill: var(--color-primary-light);
+  background-color: var(--color-primary-dark);
+}
+.carousel-button.next {
+  transform: rotate(180deg);
 }
 
 .section {
   padding: 48px 0;
 }
-
-.container {
-  width: 100%;
-  max-width: 1288px;
-  margin: 0 auto;
-  padding: 0 24px;
-}
-
-.section-title {
+.section__title {
   font-size: 64px;
   font-weight: 900;
   line-height: 1.3;
 }
-
-.section-title.centered {
+.section__title--centered {
   text-align: center;
-}
-
-.section-title .accent {
-  color: var(--color-brand-dark);
 }
 
 .header {
@@ -138,21 +201,18 @@ ul {
   width: 100%;
   padding-top: 32px;
 }
-
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
   gap: 40px;
 }
-
-.header-nav {
+.header__nav {
   display: flex;
   align-items: center;
   flex-grow: 1;
   gap: 40px;
 }
-
-.header-menu {
+.header__menu {
   display: flex;
   gap: 64px;
   flex-grow: 1;
@@ -161,19 +221,12 @@ ul {
 
 .hero-section {
   padding: 272px 0;
-  background-image: linear-gradient(
-      102.76deg,
-      rgba(18, 18, 17, 0.78) 2.03%,
-      rgba(18, 18, 17, 0.6) 58.46%,
-      rgba(18, 18, 17, 0) 90.36%
-    ),
-    url(../images/couple-in-bakery.jpg);
+  background-image: linear-gradient(102.76deg, rgba(18, 18, 17, 0.78) 2.03%, rgba(18, 18, 17, 0.6) 58.46%, rgba(18, 18, 17, 0) 90.36%), url(../images/couple-in-bakery.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
 }
-
-.hero-title {
+.hero-section__title {
   color: var(--color-primary-light);
   text-align: center;
   font-size: 128px;
@@ -181,83 +234,29 @@ ul {
   margin-bottom: 0;
 }
 
-.hero-title .accent {
-  color: var(--color-brand-light);
-}
-
 .traditions-sections {
   padding-top: 96px;
 }
-
-.traditions-container {
+.traditions-sections__container {
   display: flex;
   justify-content: space-between;
   gap: 40px;
 }
-
-.traditions-content {
+.traditions-sections__content {
   max-width: 710px;
 }
-
-.traditions-title {
+.traditions-sections__title {
   margin-bottom: 42px;
 }
-
-.traditions-text .brand {
-  color: var(--color-brand-light);
-  font-weight: 600;
+.traditions-sections__text--limited {
+  max-width: 330px;
 }
 
-.traditions-text.limited {
-  max-width: 340px;
-}
-
-.uppercase {
-  text-transform: uppercase;
-}
-
-.chef-title {
-  font-size: 40px;
-  font-weight: 600;
-  margin-bottom: 16px;
-}
-
-.chefs-title {
+.chefs-section__title {
   margin: 0 auto 80px;
-  /* max-width: 558px; */
   position: relative;
 }
-
-.chefs-list {
-  display: flex;
-  gap: 40px 30px;
-  flex-wrap: wrap;
-}
-
-.chef-item {
-  flex-basis: calc((100% - 30px) / 2);
-}
-
-.chef-text p {
-  margin-bottom: 24px;
-}
-
-.chef-text p:last-child {
-  margin-bottom: 0px;
-}
-
-.chef-card {
-  display: flex;
-  gap: 30px;
-}
-
-.chef-photo {
-  border-radius: 4px 4px 4px 200px;
-  box-shadow: -16px 16px 0 0 #faf4ea, -16px 16px 0 2px #0c0c0c;
-}
-
-.chefs-title::after,
-.chefs-title::before {
+.chefs-section__title::after, .chefs-section__title::before {
   display: block;
   width: 352px;
   height: 2px;
@@ -266,29 +265,58 @@ ul {
   position: absolute;
   bottom: 24px;
 }
-
-.chefs-title::before {
+.chefs-section__title::before {
   left: 0;
 }
-
-.chefs-title::after {
+.chefs-section__title::after {
   right: 0;
 }
+.chefs-section__list {
+  display: flex;
+  gap: 40px 30px;
+  flex-wrap: wrap;
+}
+.chefs-section__item {
+  flex-basis: calc((100% - 30px) / 2);
+}
 
-.formats-container {
+.chef-card {
+  display: flex;
+  gap: 30px;
+}
+.chef-card__photo {
+  border-radius: 4px 4px 4px 200px;
+  box-shadow: -16px 16px 0 0 #faf4ea, -16px 16px 0 2px #0c0c0c;
+}
+.chef-card__title {
+  margin-bottom: 16px;
+  font-size: 40px;
+  font-weight: 600;
+}
+.chef-card__text {
+  margin-bottom: 24px;
+}
+.chef-card__text:last-child {
+  margin-bottom: 0px;
+}
+
+.formats-section {
   display: flex;
   gap: 32px;
   align-items: center;
 }
-
-.formats-list {
+.formats-section__list {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
 }
-
-.formats-item {
+.formats-section__item {
   flex-basis: calc((100% - 40px) / 3);
+}
+.formats-section__container {
+  display: flex;
+  align-items: center;
+  gap: 32px;
 }
 
 .format-card {
@@ -299,20 +327,13 @@ ul {
   padding: 24px;
   height: 444px;
   border-radius: 16px;
-  background-image: linear-gradient(
-    180deg,
-    rgba(49, 38, 26, 0) 55.21%,
-    rgba(49, 38, 26, 0.71) 72.92%,
-    var(--color-primary-dark) 100%
-  );
+  background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark) 100%);
   transition: transform 0.3s;
 }
-
 .format-card:hover {
   transform: scale(1.05);
 }
-
-.format-image {
+.format-card__image {
   position: absolute;
   top: 0;
   left: 0;
@@ -320,18 +341,15 @@ ul {
   height: 100%;
   z-index: -1;
 }
-
-.formats-title {
+.format-card__title {
   margin-bottom: 80px;
 }
-
-.format-title {
+.format-card__title {
   font-size: 24px;
   font-weight: 600;
   color: var(--color-primary-light);
 }
-
-.formats-text {
+.format-card__text {
   font-size: 14px;
   font-weight: 300;
   color: var(--color-primary-light);
@@ -341,36 +359,38 @@ ul {
   padding: 16px 0;
   background-color: var(--color-brand-light);
 }
-
-.advantages-list {
+.advantages-section__list {
   display: flex;
   justify-content: space-between;
   gap: 40px;
 }
-
-.advantages-item {
+.advantages-section__item {
   font-size: 20px;
   font-weight: 300;
   color: var(--color-primary-light);
 }
 
-.contact-section {
+.contacts-section {
   padding-bottom: 96px;
 }
-
-.contact-container {
+.contacts-section__container {
   display: flex;
   gap: 32px;
 }
-
-.contact-map {
+.contacts-section__map {
   flex-shrink: 0;
   border: none;
   border-radius: 16px;
 }
-
-.contacts-title {
+.contacts-section__title {
   margin-bottom: 16px;
+}
+.contacts-section__form-field {
+  margin-bottom: 24px;
+}
+.contacts-section__button {
+  display: block;
+  margin: 0 auto 16px;
 }
 
 .footer {
@@ -483,7 +503,6 @@ ul {
   padding: 20px 0;
   transition: opacity 0.3s, visibility 0.3s;
 }
-
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -501,36 +520,15 @@ ul {
   border-radius: 32px;
   overflow-y: auto;
 }
-
-.modal-btn-close {
+.modal__btn-close {
   position: absolute;
   right: 40px;
   top: 40px;
 }
-
-.form-field {
+.modal__form-field {
   margin-bottom: 32px;
 }
-
-.form-input {
-  padding: 16px 42px;
-  width: 100%;
-  border-radius: 8px;
-  border: 1px solid var(--color-primary-dark);
-  background-color: transparent;
-}
-
-.form-input:focus {
-  border-color: var(--color-brand-light);
-  outline: none;
-  font-size: 16px;
-}
-
-.form-label {
-  display: block;
-}
-
-.form-button {
+.modal__button {
   display: block;
   margin: 0 auto 24px;
 }
@@ -543,32 +541,14 @@ ul {
   font-weight: 500;
   text-align: center;
 }
-
-.form-link {
+.form-terms__link {
   color: var(--color-primary-dark);
   text-underline-offset: 2px;
 }
 
-.carousel-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  background-color: transparent;
-  margin: 0;
-  padding: 0;
-  fill: var(--color-primary-dark);
-  border: 1px solid var(--color-primary-dark);
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.carousel-button:hover {
-  fill: var(--color-primary-light);
-  background-color: var(--color-primary-dark);
-}
-
-.carousel-button.next {
-  transform: rotate(180deg);
-} /*# sourceMappingURL=main.css.map */
+.container {
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 0 24px;
+}/*# sourceMappingURL=main.css.map */
