--- a/scss/components/_carousel-button.scss
+++ b/scss/components/_carousel-button.scss
@@ -11,13 +11,13 @@
   border: 1px solid var(--color-primary-dark);
   border-radius: 50%;
   cursor: pointer;
-}
 
-.carousel-button:hover {
-  fill: var(--color-primary-light);
-  background-color: var(--color-primary-dark);
-}
+  &:hover {
+    fill: var(--color-primary-light);
+    background-color: var(--color-primary-dark);
+  }
 
-.carousel-button.next {
-  transform: rotate(180deg);
+  &.next {
+    transform: rotate(180deg);
+  }
 }
