--- a/scss/layouts/_chefs-section.scss
+++ b/scss/layouts/_chefs-section.scss
@@ -1,58 +1,33 @@
-.chef-title {
-  font-size: 40px;
-  font-weight: 600;
-  margin-bottom: 16px;
-}
+.chefs-section {
+  &__title {
+    margin: 0 auto 80px;
+    position: relative;
+    &::after,
+    &::before {
+      display: block;
+      width: 352px;
+      height: 2px;
+      background-color: var(--color-primary-light);
+      content: " ";
+      position: absolute;
+      bottom: 24px;
+    }
+    &::before {
+      left: 0;
+    }
 
-.chefs-title {
-  margin: 0 auto 80px;
-  /* max-width: 558px; */
-  position: relative;
-}
+    &::after {
+      right: 0;
+    }
+  }
 
-.chefs-list {
-  display: flex;
-  gap: 40px 30px;
-  flex-wrap: wrap;
-}
+  &__list {
+    display: flex;
+    gap: 40px 30px;
+    flex-wrap: wrap;
+  }
 
-.chef-item {
-  flex-basis: calc((100% - 30px) / 2);
-}
-
-.chef-text p {
-  margin-bottom: 24px;
-}
-
-.chef-text p:last-child {
-  margin-bottom: 0px;
-}
-
-.chef-card {
-  display: flex;
-  gap: 30px;
-}
-
-.chef-photo {
-  border-radius: 4px 4px 4px 200px;
-  box-shadow: -16px 16px 0 0 #faf4ea, -16px 16px 0 2px #0c0c0c;
-}
-
-.chefs-title::after,
-.chefs-title::before {
-  display: block;
-  width: 352px;
-  height: 2px;
-  background-color: var(--color-primary-light);
-  content: " ";
-  position: absolute;
-  bottom: 24px;
-}
-
-.chefs-title::before {
-  left: 0;
-}
-
-.chefs-title::after {
-  right: 0;
+  &__item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
 }
