--- a/scss/layouts/_contacts-section.scss
+++ b/scss/layouts/_contacts-section.scss
@@ -1,18 +1,25 @@
-.contact-section {
+.contacts-section {
   padding-bottom: 96px;
-}
 
-.contact-container {
-  display: flex;
-  gap: 32px;
-}
+  &__container {
+    display: flex;
+    gap: 32px;
+  }
 
-.contact-map {
-  flex-shrink: 0;
-  border: none;
-  border-radius: 16px;
-}
+  &__map {
+    flex-shrink: 0;
+    border: none;
+    border-radius: 16px;
+  }
 
-.contacts-title {
-  margin-bottom: 16px;
+  &__title {
+    margin-bottom: 16px;
+  }
+  &__form-field {
+    margin-bottom: 24px;
+  }
+  &__button {
+    display: block;
+    margin: 0 auto 16px;
+  }
 }
