--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,28 +1,26 @@
 .header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding-top: 32px;
-}
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 32px;
 
-.header-container {
+  &__container {
     display: flex;
     align-items: center;
-    /*remove*/
     gap: 40px;
-}
-
-.header-nav {
+  }
+  &__nav {
     display: flex;
     align-items: center;
     flex-grow: 1;
     gap: 40px;
-}
+  }
 
-.header-menu {
+  &__menu {
     display: flex;
     gap: 64px;
     flex-grow: 1;
     justify-content: center;
+  }
 }
