--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -10,12 +10,11 @@
   justify-content: center;
   padding: 20px 0;
   transition: opacity 0.3s, visibility 0.3s;
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+  &.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 }
 
 .modal {
@@ -28,10 +27,17 @@
   background-color: var(--color-primary-light);
   border-radius: 32px;
   overflow-y: auto;
-}
 
-.modal-btn-close {
-  position: absolute;
-  right: 40px;
-  top: 40px;
+  &__btn-close {
+    position: absolute;
+    right: 40px;
+    top: 40px;
+  }
+  &__form-field {
+    margin-bottom: 32px;
+  }
+  &__button {
+    display: block;
+    margin: 0 auto 24px;
+  }
 }
