--- a/scss/layouts/_section.scss
+++ b/scss/layouts/_section.scss
@@ -1,24 +1,12 @@
 .section {
   padding: 48px 0;
-}
 
-.container {
-  width: 100%;
-  max-width: 1288px;
-  margin: 0 auto;
-  padding: 0 24px;
-}
-
-.section-title {
-  font-size: 64px;
-  font-weight: 900;
-  line-height: 1.3;
-}
-
-.section-title.centered {
-  text-align: center;
-}
-
-.section-title .accent {
-  color: var(--color-brand-dark);
+  &__title {
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
+    &--centered {
+      text-align: center;
+    }
+  }
 }
