--- a/scss/layouts/_traditions-section.scss
+++ b/scss/layouts/_traditions-section.scss
@@ -1,30 +1,23 @@
 .traditions-sections {
   padding-top: 96px;
-}
 
-.traditions-container {
-  display: flex;
-  justify-content: space-between;
-  gap: 40px;
-}
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+  }
 
-.traditions-content {
-  max-width: 710px;
-}
+  &__content {
+    max-width: 710px;
+  }
 
-.traditions-title {
-  margin-bottom: 42px;
-}
+  &__title {
+    margin-bottom: 42px;
+  }
 
-.traditions-text .brand {
-  color: var(--color-brand-light);
-  font-weight: 600;
-}
-
-.traditions-text.limited {
-  max-width: 340px;
-}
-
-.uppercase {
-  text-transform: uppercase;
+  &__text {
+    &--limited {
+      max-width: 330px;
+    }
+  }
 }
