--- a/css/main.css
+++ b/css/main.css
@@ -213,10 +213,36 @@ ul {
   gap: 40px;
 }
 .header__menu {
-  display: flex;
-  gap: 64px;
-  flex-grow: 1;
-  justify-content: center;
+  display: none;
+}
+@media screen and (min-width: 1280px) {
+  .header__menu {
+    display: flex;
+    gap: 64px;
+    flex-grow: 1;
+    justify-content: center;
+  }
+}
+.header__button {
+  display: none;
+}
+@media screen and (min-width: 1280px) {
+  .header__button {
+    display: block;
+  }
+}
+.header__burger {
+  background-color: transparent;
+  border: none;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  fill: var(--color-primary-light);
+}
+@media screen and (min-width: 1280px) {
+  .header__burger {
+    display: none;
+  }
 }
 
 .hero-section {
@@ -229,9 +255,16 @@ ul {
 .hero-section__title {
   color: var(--color-primary-light);
   text-align: center;
-  font-size: 128px;
+  font-size: 67px;
+  line-height: 1;
   font-weight: 900;
   margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .hero-section__title {
+    font-size: 128px;
+    line-height: 1.5;
+  }
 }
 
 .traditions-sections {
