--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -14,8 +14,14 @@
   &__title {
     color: var(--color-primary-light);
     text-align: center;
-    font-size: 128px;
+    font-size: 67px;
+    line-height: 1;
     font-weight: 900;
     margin-bottom: 0;
+
+    @media screen and (min-width: $bp-tablet) {
+      font-size: 128px;
+      line-height: 1.5;
+    }
   }
 }
