--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,6 +1,10 @@
 :root {
-    --color-brand-light: #819b57;
-    --color-primary-dark: #31261a;
-    --color-primary-light: #faf4ea;
-    --color-brand-dark: #465929;
+  --color-brand-light: #819b57;
+  --color-primary-dark: #31261a;
+  --color-primary-light: #faf4ea;
+  --color-brand-dark: #465929;
 }
+
+$bp-mobile: 480px;
+$bp-tablet: 768px;
+$bp-desktop: 1280px;
