--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,5 +24,6 @@
 @import "./layouts/contacts-section";
 @import "./layouts/footer";
 @import "./layouts/modal";
+@import "./layouts/mobile-menu";
 @import "./layouts/form-terms";
 @import "./layouts/container";
