--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,8 +1,9 @@
 :root {
   --color-brand-light: #819b57;
+  --color-brand-dark: #465929;
   --color-primary-dark: #31261a;
   --color-primary-light: #faf4ea;
-  --color-brand-dark: #465929;
+  --color-brand-light2: #cfcfbc;
 }
 
 $bp-mobile: 480px;
