--- a/css/main.css
+++ b/css/main.css
@@ -28,9 +28,10 @@
 }
 :root {
   --color-brand-light: #819b57;
+  --color-brand-dark: #465929;
   --color-primary-dark: #31261a;
   --color-primary-light: #faf4ea;
-  --color-brand-dark: #465929;
+  --color-brand-light2: #cfcfbc;
 }
 
 *,
@@ -42,10 +43,16 @@
 body {
   color: var(--color-primary-dark);
   font-family: "Poppins", sans-serif;
-  font-size: 18px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 300;
   line-height: 1.5;
   margin: 0;
+}
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 18px;
+    font-weight: 400;
+  }
 }
 
 h1,
@@ -98,6 +105,7 @@ ul {
 }
 
 .button {
+  display: block;
   padding: 16px 32px;
   color: var(--color-primary-light);
   border-radius: 8px;
@@ -183,12 +191,22 @@ ul {
 }
 
 .section {
-  padding: 48px 0;
+  padding: 20px 0;
+}
+@media screen and (min-width: 768px) {
+  .section {
+    padding: 48px 0;
+  }
 }
 .section__title {
-  font-size: 64px;
+  font-size: 32px;
   font-weight: 900;
   line-height: 1.3;
+}
+@media screen and (min-width: 768px) {
+  .section__title {
+    font-size: 64px;
+  }
 }
 .section__title--centered {
   text-align: center;
@@ -199,7 +217,12 @@ ul {
   top: 0;
   left: 0;
   width: 100%;
-  padding-top: 32px;
+  padding-top: 16px;
+}
+@media screen and (min-width: 1280px) {
+  .header {
+    padding-top: 32px;
+  }
 }
 .header__container {
   display: flex;
@@ -246,11 +269,21 @@ ul {
 }
 
 .hero-section {
-  padding: 272px 0;
+  padding: 124px 0;
   background-image: linear-gradient(102.76deg, rgba(18, 18, 17, 0.78) 2.03%, rgba(18, 18, 17, 0.6) 58.46%, rgba(18, 18, 17, 0) 90.36%), url(../images/couple-in-bakery.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
+}
+@media screen and (min-width: 1280px) {
+  .hero-section {
+    padding: 272px 0;
+  }
+}
+@media screen and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(102.76deg, rgba(18, 18, 17, 0.78) 2.03%, rgba(18, 18, 17, 0.6) 58.46%, rgba(18, 18, 17, 0) 90.36%), url(../images/couple-in-bakery@2x.jpg);
+  }
 }
 .hero-section__title {
   color: var(--color-primary-light);
@@ -258,21 +291,36 @@ ul {
   font-size: 67px;
   line-height: 1;
   font-weight: 900;
-  margin-bottom: 0;
+  margin-bottom: 48px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1280px) {
   .hero-section__title {
     font-size: 128px;
     line-height: 1.5;
+    margin-bottom: 0;
+  }
+}
+.hero-section__button {
+  margin: 0 auto;
+}
+@media screen and (min-width: 1280px) {
+  .hero-section__button {
+    display: none;
   }
 }
 
 .traditions-sections {
-  padding-top: 96px;
+  padding-top: 40px;
+}
+@media screen and (min-width: 768px) {
+  .traditions-sections {
+    padding-top: 96px;
+  }
 }
 .traditions-sections__container {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   gap: 40px;
 }
 .traditions-sections__content {
@@ -283,6 +331,15 @@ ul {
 }
 .traditions-sections__text--limited {
   max-width: 330px;
+}
+.traditions-sections__image {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .traditions-sections__image {
+    display: block;
+    border-radius: 400px 400px 0px 0px;
+  }
 }
 
 .chefs-section__title {
@@ -390,17 +447,39 @@ ul {
 
 .advantages-section {
   padding: 16px 0;
-  background-color: var(--color-brand-light);
+}
+@media screen and (min-width: 768px) {
+  .advantages-section {
+    background-color: var(--color-brand-light);
+  }
 }
 .advantages-section__list {
   display: flex;
-  justify-content: space-between;
-  gap: 40px;
+  flex-direction: column;
+  gap: 16px;
+  padding: 24px 40px;
+  background-color: var(--color-brand-light2);
+  border-radius: 24px;
+}
+@media screen and (min-width: 768px) {
+  .advantages-section__list {
+    flex-direction: row;
+    background-color: transparent;
+    justify-content: space-between;
+    gap: 40px;
+    border-radius: 0;
+    padding: 0;
+  }
 }
 .advantages-section__item {
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 300;
-  color: var(--color-primary-light);
+}
+@media screen and (min-width: 768px) {
+  .advantages-section__item {
+    color: var(--color-primary-light);
+    font-size: 20px;
+  }
 }
 
 .contacts-section {
@@ -562,8 +641,26 @@ ul {
   margin-bottom: 32px;
 }
 .modal__button {
-  display: block;
   margin: 0 auto 24px;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-primary-light);
+  transform: translateX(100%);
+  transition: transform 0.3s;
+}
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+.mobile-menu__btn-close {
+  position: absolute;
+  top: 16px;
+  right: 24px;
 }
 
 .form-terms {
