--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,16 +1,20 @@
 *,
 *::after,
 *::before {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    color: var(--color-primary-dark);
-    font-family: "Poppins", sans-serif;
+  @media screen and (min-width: $bp-tablet) {
     font-size: 18px;
     font-weight: 400;
-    line-height: 1.5;
-    margin: 0;
+  }
+  color: var(--color-primary-dark);
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  margin: 0;
 }
 
 h1,
@@ -20,19 +24,19 @@ h4,
 h5,
 h6,
 p {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 address {
-    font-style: normal;
+  font-style: normal;
 }
 
 a {
-    display: inline-block;
+  display: inline-block;
 }
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
