--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,14 +1,15 @@
 .button {
-    padding: 16px 32px;
-    color: var(--color-primary-light);
-    border-radius: 8px;
-    border: 2px solid var(--color-brand-light);
-    background-color: var(--color-brand-light);
-    cursor: pointer;
-    font-weight: 600;
+  display: block;
+  padding: 16px 32px;
+  color: var(--color-primary-light);
+  border-radius: 8px;
+  border: 2px solid var(--color-brand-light);
+  background-color: var(--color-brand-light);
+  cursor: pointer;
+  font-weight: 600;
 }
 
 .button:hover {
-    background-color: transparent;
-    color: var(--color-brand-light);
+  background-color: transparent;
+  color: var(--color-brand-light);
 }
