--- a/scss/layouts/_traditions-section.scss
+++ b/scss/layouts/_traditions-section.scss
@@ -1,9 +1,12 @@
 .traditions-sections {
-  padding-top: 96px;
-
+  padding-top: 40px;
+  @media screen and (min-width: $bp-tablet) {
+    padding-top: 96px;
+  }
   &__container {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     gap: 40px;
   }
 
@@ -19,5 +22,12 @@
     &--limited {
       max-width: 330px;
     }
+  }
+  &__image {
+    @media screen and (min-width: $bp-tablet) {
+      display: block;
+      border-radius: 400px 400px 0px 0px;
+    }
+    display: none;
   }
 }
