--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./components/links";
 @import "./components/input";
 @import "./components/carousel-button";
+@import "./components/pagination";
 
 @import "./layouts/section";
 @import "./layouts/header";
