--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,14 @@ address {
   font-style: normal;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 a {
   display: inline-block;
 }
@@ -169,18 +177,23 @@ ul {
 }
 
 .carousel-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  background-color: transparent;
+  display: none;
   margin: 0;
   padding: 0;
-  fill: var(--color-primary-dark);
-  border: 1px solid var(--color-primary-dark);
-  border-radius: 50%;
   cursor: pointer;
+}
+@media screen and (min-width: 1280px) {
+  .carousel-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    background-color: transparent;
+    fill: var(--color-primary-dark);
+    border: 1px solid var(--color-primary-dark);
+    border-radius: 50%;
+  }
 }
 .carousel-button:hover {
   fill: var(--color-primary-light);
@@ -188,6 +201,23 @@ ul {
 }
 .carousel-button.next {
   transform: rotate(180deg);
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  justify-content: center;
+}
+.pagination__button {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  padding: 0;
+  background-color: var(--color-primary-dark);
+}
+.pagination__button--active {
+  background-color: var(--color-brand-light);
 }
 
 .section {
@@ -343,17 +373,27 @@ ul {
 }
 
 .chefs-section__title {
-  margin: 0 auto 80px;
+  margin: 0 auto 24px;
   position: relative;
 }
+@media screen and (min-width: 1280px) {
+  .chefs-section__title {
+    margin-bottom: 80px;
+  }
+}
 .chefs-section__title::after, .chefs-section__title::before {
-  display: block;
+  display: none;
   width: 352px;
   height: 2px;
   background-color: var(--color-primary-light);
   content: " ";
   position: absolute;
   bottom: 24px;
+}
+@media screen and (min-width: 1280px) {
+  .chefs-section__title::after, .chefs-section__title::before {
+    display: block;
+  }
 }
 .chefs-section__title::before {
   left: 0;
@@ -363,50 +403,75 @@ ul {
 }
 .chefs-section__list {
   display: flex;
-  gap: 40px 30px;
+  flex-direction: column;
+  gap: 20px;
   flex-wrap: wrap;
 }
-.chefs-section__item {
-  flex-basis: calc((100% - 30px) / 2);
+@media screen and (min-width: 768px) {
+  .chefs-section__list {
+    gap: 40px 30px;
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 768px) {
+  .chefs-section__item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
 }
 
 .chef-card {
   display: flex;
-  gap: 30px;
+  gap: 16px;
+  align-items: flex-start;
+}
+@media screen and (min-width: 1280px) {
+  .chef-card {
+    gap: 30px;
+  }
 }
 .chef-card__photo {
+  width: 140px;
   border-radius: 4px 4px 4px 200px;
   box-shadow: -16px 16px 0 0 #faf4ea, -16px 16px 0 2px #0c0c0c;
 }
+@media screen and (min-width: 1280px) {
+  .chef-card__photo {
+    width: 240px;
+  }
+}
 .chef-card__title {
   margin-bottom: 16px;
-  font-size: 40px;
+  font-size: 24px;
   font-weight: 600;
 }
+@media screen and (min-width: 768px) {
+  .chef-card__title {
+    font-size: 40px;
+  }
+}
 .chef-card__text {
+  font-size: 14px;
   margin-bottom: 24px;
 }
 .chef-card__text:last-child {
   margin-bottom: 0px;
 }
+@media screen and (min-width: 768px) {
+  .chef-card__text {
+    font-size: 18px;
+  }
+}
 
-.formats-section {
+.formats-section__slider {
   display: flex;
-  gap: 32px;
   align-items: center;
-}
-.formats-section__list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-.formats-section__item {
-  flex-basis: calc((100% - 40px) / 3);
+  gap: 32px;
 }
 .formats-section__container {
-  display: flex;
-  align-items: center;
-  gap: 32px;
+  overflow: hidden;
+}
+.formats-section__list {
+  margin-bottom: 32px;
 }
 
 .format-card {
@@ -418,10 +483,7 @@ ul {
   height: 444px;
   border-radius: 16px;
   background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark) 100%);
-  transition: transform 0.3s;
-}
-.format-card:hover {
-  transform: scale(1.05);
+  overflow: hidden;
 }
 .format-card__image {
   position: absolute;
@@ -432,7 +494,7 @@ ul {
   z-index: -1;
 }
 .format-card__title {
-  margin-bottom: 80px;
+  margin-bottom: 16px;
 }
 .format-card__title {
   font-size: 24px;
@@ -487,12 +549,34 @@ ul {
 }
 .contacts-section__container {
   display: flex;
-  gap: 32px;
+  flex-direction: column;
+  gap: 24px;
+}
+@media screen and (min-width: 768px) {
+  .contacts-section__container {
+    flex-direction: row;
+    gap: 32px;
+  }
 }
 .contacts-section__map {
   flex-shrink: 0;
+  margin: 0 -24px;
+  height: 176px;
   border: none;
-  border-radius: 16px;
+}
+@media screen and (min-width: 768px) {
+  .contacts-section__map {
+    margin: auto;
+    width: 320px;
+    height: 500px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .contacts-section__map {
+    border-radius: 16px;
+    width: 600px;
+    height: 595px;
+  }
 }
 .contacts-section__title {
   margin-bottom: 16px;
