--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -31,6 +31,13 @@ address {
   font-style: normal;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 a {
   display: inline-block;
 }
