--- a/scss/components/_carousel-button.scss
+++ b/scss/components/_carousel-button.scss
@@ -1,16 +1,21 @@
 .carousel-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  background-color: transparent;
+  display: none;
+
   margin: 0;
   padding: 0;
-  fill: var(--color-primary-dark);
-  border: 1px solid var(--color-primary-dark);
-  border-radius: 50%;
+
   cursor: pointer;
+  @media screen and (min-width: $bp-desktop) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    background-color: transparent;
+    fill: var(--color-primary-dark);
+    border: 1px solid var(--color-primary-dark);
+    border-radius: 50%;
+  }
 
   &:hover {
     fill: var(--color-primary-light);
