--- a/scss/layouts/_chefs-section.scss
+++ b/scss/layouts/_chefs-section.scss
@@ -1,21 +1,28 @@
 .chefs-section {
   &__title {
-    margin: 0 auto 80px;
+    margin: 0 auto 24px;
     position: relative;
+
+    @media screen and (min-width: $bp-desktop) {
+      margin-bottom: 80px;
+    }
+
     &::after,
     &::before {
-      display: block;
+      display: none;
       width: 352px;
       height: 2px;
       background-color: var(--color-primary-light);
       content: " ";
       position: absolute;
       bottom: 24px;
+      @media screen and (min-width: $bp-desktop) {
+        display: block;
+      }
     }
     &::before {
       left: 0;
     }
-
     &::after {
       right: 0;
     }
@@ -23,11 +30,19 @@
 
   &__list {
     display: flex;
-    gap: 40px 30px;
+    flex-direction: column;
+    gap: 20px;
     flex-wrap: wrap;
+
+    @media screen and (min-width: $bp-tablet) {
+      gap: 40px 30px;
+      flex-direction: row;
+    }
   }
 
   &__item {
-    flex-basis: calc((100% - 30px) / 2);
+    @media screen and (min-width: $bp-tablet) {
+      flex-basis: calc((100% - 30px) / 2);
+    }
   }
 }
