--- a/scss/layouts/_contacts-section.scss
+++ b/scss/layouts/_contacts-section.scss
@@ -3,13 +3,32 @@
 
   &__container {
     display: flex;
-    gap: 32px;
+    flex-direction: column;
+    gap: 24px;
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      gap: 32px;
+    }
   }
 
   &__map {
     flex-shrink: 0;
+    // width: 100%;
+    margin: 0 -24px;
+    height: 176px;
     border: none;
-    border-radius: 16px;
+
+    @media screen and (min-width: $bp-tablet) {
+      margin: auto;
+      width: 320px;
+      height: 500px;
+    }
+    @media screen and (min-width: $bp-desktop) {
+      border-radius: 16px;
+      width: 600px;
+      height: 595px;
+    }
   }
 
   &__title {
