--- a/scss/layouts/_format-card.scss
+++ b/scss/layouts/_format-card.scss
@@ -12,11 +12,7 @@
     rgba(49, 38, 26, 0.71) 72.92%,
     var(--color-primary-dark) 100%
   );
-  transition: transform 0.3s;
-
-  &:hover {
-    transform: scale(1.05);
-  }
+  overflow: hidden;
   &__image {
     position: absolute;
     top: 0;
@@ -26,7 +22,7 @@
     z-index: -1;
   }
   &__title {
-    margin-bottom: 80px;
+    margin-bottom: 16px;
   }
   &__title {
     font-size: 24px;
