--- a/scss/layouts/_formats-section.scss
+++ b/scss/layouts/_formats-section.scss
@@ -1,20 +1,13 @@
 .formats-section {
-  display: flex;
-  gap: 32px;
-  align-items: center;
-
-  &__list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-  }
-  &__item {
-    flex-basis: calc((100% - 40px) / 3);
-  }
-
-  &__container {
+  &__slider {
     display: flex;
     align-items: center;
     gap: 32px;
+  }
+  &__container {
+    overflow: hidden;
+  }
+  &__list {
+    margin-bottom: 32px;
   }
 }
