--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,96 +1,112 @@
 .footer {
   position: relative;
+  text-align: center;
   padding: 32px 0;
   background-image: url(../images/footer-background.png);
   background-color: var(--color-primary-dark);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-}
 
-.footer::before {
-  position: absolute;
-  width: 180px;
-  height: 120px;
-  bottom: 0;
-  left: 0;
-  background-repeat: no-repeat;
-  background-image: url(../images/decor-bread-small.png);
-  content: "";
-}
+  @media screen and (min-width: $bp-tablet) {
+    text-align: left;
+  }
+  &::before {
+    position: absolute;
+    width: 180px;
+    height: 120px;
+    bottom: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-image: url(../images/decor-bread-small.png);
+    content: "";
+  }
 
-.footer::after {
-  position: absolute;
-  width: 380px;
-  height: 190px;
-  bottom: 0;
-  right: 0;
-  background-repeat: no-repeat;
-  background-image: url(../images/decor-bread-big.png);
-  content: "";
-}
+  &::after {
+    position: absolute;
+    width: 380px;
+    height: 190px;
+    bottom: 0;
+    right: 0;
+    background-repeat: no-repeat;
+    background-image: url(../images/decor-bread-big.png);
+    content: "";
+  }
 
-.footer-container {
-  display: flex;
-  gap: 20px;
-}
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+    }
+  }
 
-.footer-nav,
-.footer-address {
-  display: flex;
-  flex-basis: 50%;
-  gap: 20px;
-}
+  &__nav,
+  &__address {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 
-.footer-logo,
-.footer-menu,
-.address-list,
-.address-info {
-  flex-grow: 1;
-  gap: 16px;
-}
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      flex-basis: 50%;
+    }
+  }
 
-.address-info {
-  display: flex;
-  flex-direction: column;
-}
+  &__logo,
+  &__menu,
+  &__address-list,
+  &__address-info {
+    flex-grow: 1;
+    gap: 16px;
+  }
+  &__address-info {
+    display: flex;
+    flex-direction: column;
+  }
 
-.footer-menu {
-  display: flex;
-  flex-direction: column;
-}
+  &__menu {
+    display: flex;
+    flex-direction: column;
+  }
 
-.footer-socials {
-  display: flex;
-  gap: 24px;
-  margin-top: 16px;
-}
+  &__socials {
+    display: flex;
+    gap: 24px;
+    margin-top: 16px;
+    justify-content: center;
+    @media screen and (min-width: $bp-tablet) {
+      justify-content: left;
+    }
+  }
 
-.address-list {
-  display: flex;
-  flex-direction: column;
-}
+  &__address-list {
+    display: flex;
+    flex-direction: column;
+  }
 
-.address-link {
-  font-size: 16px;
-  font-weight: 300;
-  text-decoration: none;
-  color: var(--color-primary-light);
-}
+  &__address-link {
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+    color: var(--color-primary-light);
+  }
 
-.address-link:hover {
-  color: var(--color-brand-light);
-}
+  &__address-link:hover {
+    color: var(--color-brand-light);
+  }
 
-.address-icon {
-  fill: var(--color-primary-light);
-}
+  &__address-icon {
+    fill: var(--color-primary-light);
+  }
 
-.address-icon:hover {
-  fill: var(--color-brand-light);
-}
+  &__address-icon:hover {
+    fill: var(--color-brand-light);
+  }
 
-.address-copyright {
-  font-size: 14px;
-  color: var(--color-primary-dark);
+  &__address-copyright {
+    font-size: 14px;
+    color: var(--color-primary-light);
+  }
 }
