--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px 0;
+  padding: 20px;
   transition: opacity 0.3s, visibility 0.3s;
   &.is-hidden {
     opacity: 0;
@@ -23,10 +23,14 @@
   height: 100%;
   max-width: 880px;
   max-height: 880px;
-  padding: 128px;
+  padding: 48px;
   background-color: var(--color-primary-light);
   border-radius: 32px;
   overflow-y: auto;
+
+  @media screen and (min-width: $bp-tablet) {
+    padding: 128px;
+  }
 
   &__btn-close {
     position: absolute;
